--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vitepress": "^1.0.0-alpha.29",
+    "vitepress": "^ v1.0.0-alpha.33",
     "vue": "^3.2.45"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
